src/main/java/org/sainm/shp/antlr/JBashParser.java
// Generated from D:/github/shp/src/main/resources/org/sainm/shp/antlr/JBashParser.g4 by ANTLR 4.13.1
package org.sainm.shp.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JBashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SKIP0=1, SKIP1=2, SKIP2=3, SKIP3=4, SEMICOLON=5, DOUBLESEMICOLON=6, CRLF=7, 
		PIPE=8, AND=9, DOUBLEAND=10, DOUBLEPIPE=11, EQUAL=12, DOUBLEEQUAL=13, 
		DIFFERENT=14, MINOR=15, MAJOR=16, MINEQ=17, MAJEQ=18, DOUBLEMIN=19, DOUBLEMAJ=20, 
		PRODUCT=21, DIVISION=22, MODULE=23, PLUS=24, MIN=25, BILL=26, ESCL=27, 
		LBRACE=28, RBRACE=29, LTON=30, RTON=31, DLTON=32, DRTON=33, APOS=34, DOT=35, 
		IF=36, ELIF=37, ELSE=38, FI=39, FOR=40, DO=41, DONE=42, WHILE=43, UNTIL=44, 
		SELECT=45, IN=46, CASE=47, ESAC=48, FUNCTION=49, RETURN=50, THEN=51, BASH_VERSION=52, 
		ALIAS=53, BREAK=54, CD=55, COMMAND=56, DECLARE=57, TYPESET=58, ECHO=59, 
		EXEC=60, EXIT=61, EXPORT=62, HELP=63, KILL=64, SPTP=65, SUSPEND=66, TEST=67, 
		TIMES=68, ULIMIT=69, UMASK=70, UNALIAS=71, UNSET=72, WAIT=73, NUMERO=74, 
		NOME_VALIDO=75, STRINGA=76, DIRECTORY=77, ZERO=78, PARAM=79, SKIP4=80;
	public static final int
		RULE_script = 0, RULE_list = 1, RULE_in = 2, RULE_unitaryList = 3, RULE_control_block = 4, 
		RULE_separator = 5, RULE_expr_concat = 6, RULE_test_param = 7, RULE_op_conf = 8, 
		RULE_redirection_op = 9, RULE_operatore_alta_priorita = 10, RULE_expression = 11, 
		RULE_conditional_expr = 12, RULE_arithmetic_eval = 13, RULE_sub = 14, 
		RULE_formula = 15, RULE_alg = 16, RULE_terminale_alta_priorita = 17, RULE_select_statement = 18, 
		RULE_case_statement = 19, RULE_case_block = 20, RULE_case_tail = 21, RULE_if_statement = 22, 
		RULE_elif_substatement = 23, RULE_for_statement = 24, RULE_while_statement = 25, 
		RULE_until_statement = 26, RULE_statement_di_assegnamento = 27, RULE_function = 28, 
		RULE_redirection = 29, RULE_return_stm = 30, RULE_built_in_commands = 31, 
		RULE_bash_version = 32, RULE_alias_stm = 33, RULE_break_stm = 34, RULE_changedir_stm = 35, 
		RULE_command = 36, RULE_declare_stm = 37, RULE_echo_stm = 38, RULE_exec_stm = 39, 
		RULE_exit_stm = 40, RULE_export_stm = 41, RULE_help_stm = 42, RULE_kill_stm = 43, 
		RULE_suspend_stm = 44, RULE_test_expr_stm = 45, RULE_times_stm = 46, RULE_ulimit_stm = 47, 
		RULE_umask_stm = 48, RULE_unalias_stm = 49, RULE_unset_stm = 50, RULE_wait_stm = 51, 
		RULE_sptp_stm = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "list", "in", "unitaryList", "control_block", "separator", 
			"expr_concat", "test_param", "op_conf", "redirection_op", "operatore_alta_priorita", 
			"expression", "conditional_expr", "arithmetic_eval", "sub", "formula", 
			"alg", "terminale_alta_priorita", "select_statement", "case_statement", 
			"case_block", "case_tail", "if_statement", "elif_substatement", "for_statement", 
			"while_statement", "until_statement", "statement_di_assegnamento", "function", 
			"redirection", "return_stm", "built_in_commands", "bash_version", "alias_stm", 
			"break_stm", "changedir_stm", "command", "declare_stm", "echo_stm", "exec_stm", 
			"exit_stm", "export_stm", "help_stm", "kill_stm", "suspend_stm", "test_expr_stm", 
			"times_stm", "ulimit_stm", "umask_stm", "unalias_stm", "unset_stm", "wait_stm", 
			"sptp_stm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "'\\t'", "'\\r'", "'#'", "';'", "';;'", null, "'|'", "'&'", 
			"'&&'", "'||'", "'='", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'<<'", "'>>'", "'*'", "'/'", "'%'", "'+'", "'-'", "'$'", "'!'", "'{'", 
			"'}'", "'('", "')'", "'(('", "'))'", "'''", "'.'", "'if'", "'elif'", 
			"'else'", "'fi'", "'for'", "'do'", "'done'", "'while'", "'until'", "'select'", 
			"'in'", "'case'", "'esac'", "'function'", "'return'", "'then'", "'BASH_VERSION'", 
			"'alias'", "'break'", "'cd'", "'command'", "'declare'", "'typeset'", 
			"'echo'", "'exec'", "'exit'", "'export'", "'help'", "'kill'", "'sptp'", 
			"'suspend'", "'test'", "'times'", "'ulimit'", "'umask'", "'unalias'", 
			"'unset'", "'wait'", null, null, null, null, "'0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SKIP0", "SKIP1", "SKIP2", "SKIP3", "SEMICOLON", "DOUBLESEMICOLON", 
			"CRLF", "PIPE", "AND", "DOUBLEAND", "DOUBLEPIPE", "EQUAL", "DOUBLEEQUAL", 
			"DIFFERENT", "MINOR", "MAJOR", "MINEQ", "MAJEQ", "DOUBLEMIN", "DOUBLEMAJ", 
			"PRODUCT", "DIVISION", "MODULE", "PLUS", "MIN", "BILL", "ESCL", "LBRACE", 
			"RBRACE", "LTON", "RTON", "DLTON", "DRTON", "APOS", "DOT", "IF", "ELIF", 
			"ELSE", "FI", "FOR", "DO", "DONE", "WHILE", "UNTIL", "SELECT", "IN", 
			"CASE", "ESAC", "FUNCTION", "RETURN", "THEN", "BASH_VERSION", "ALIAS", 
			"BREAK", "CD", "COMMAND", "DECLARE", "TYPESET", "ECHO", "EXEC", "EXIT", 
			"EXPORT", "HELP", "KILL", "SPTP", "SUSPEND", "TEST", "TIMES", "ULIMIT", 
			"UMASK", "UNALIAS", "UNSET", "WAIT", "NUMERO", "NOME_VALIDO", "STRINGA", 
			"DIRECTORY", "ZERO", "PARAM", "SKIP4"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JBashParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JBashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JBashParser.EOF, 0); }
		public List<TerminalNode> CRLF() { return getTokens(JBashParser.CRLF); }
		public TerminalNode CRLF(int i) {
			return getToken(JBashParser.CRLF, i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CRLF) {
				{
				{
				setState(106);
				match(CRLF);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			list();
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(JBashParser.LBRACE, 0); }
		public InContext in() {
			return getRuleContext(InContext.class,0);
		}
		public TerminalNode LTON() { return getToken(JBashParser.LTON, 0); }
		public UnitaryListContext unitaryList() {
			return getRuleContext(UnitaryListContext.class,0);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(JBashParser.RBRACE, 0); }
		public TerminalNode RTON() { return getToken(JBashParser.RTON, 0); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(115);
				match(LBRACE);
				setState(116);
				in();
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(117);
					match(RBRACE);
					}
					break;
				}
				}
				break;
			case LTON:
				{
				setState(120);
				match(LTON);
				setState(121);
				in();
				setState(123);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(122);
					match(RTON);
					}
					break;
				}
				}
				break;
			case EOF:
			case EQUAL:
			case DIFFERENT:
			case ESCL:
			case DLTON:
			case IF:
			case FOR:
			case WHILE:
			case UNTIL:
			case SELECT:
			case CASE:
			case FUNCTION:
			case RETURN:
			case BASH_VERSION:
			case ALIAS:
			case BREAK:
			case CD:
			case COMMAND:
			case DECLARE:
			case ECHO:
			case EXEC:
			case EXIT:
			case EXPORT:
			case HELP:
			case KILL:
			case SPTP:
			case SUSPEND:
			case TEST:
			case TIMES:
			case ULIMIT:
			case UMASK:
			case UNALIAS:
			case UNSET:
			case WAIT:
			case NOME_VALIDO:
			case STRINGA:
			case DIRECTORY:
			case PARAM:
				{
				setState(125);
				unitaryList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(128);
					separator();
					setState(129);
					list();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JBashParser.EOF, 0); }
		public List<Built_in_commandsContext> built_in_commands() {
			return getRuleContexts(Built_in_commandsContext.class);
		}
		public Built_in_commandsContext built_in_commands(int i) {
			return getRuleContext(Built_in_commandsContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<Control_blockContext> control_block() {
			return getRuleContexts(Control_blockContext.class);
		}
		public Control_blockContext control_block(int i) {
			return getRuleContext(Control_blockContext.class,i);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(JBashParser.SEMICOLON, 0); }
		public InContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitIn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InContext in() throws RecognitionException {
		InContext _localctx = new InContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_in);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUAL:
			case DIFFERENT:
			case ESCL:
			case DLTON:
			case IF:
			case FOR:
			case WHILE:
			case UNTIL:
			case SELECT:
			case CASE:
			case FUNCTION:
			case RETURN:
			case BASH_VERSION:
			case ALIAS:
			case BREAK:
			case CD:
			case COMMAND:
			case DECLARE:
			case ECHO:
			case EXEC:
			case EXIT:
			case EXPORT:
			case HELP:
			case KILL:
			case SPTP:
			case SUSPEND:
			case TEST:
			case TIMES:
			case ULIMIT:
			case UMASK:
			case UNALIAS:
			case UNSET:
			case WAIT:
			case NOME_VALIDO:
			case STRINGA:
			case DIRECTORY:
			case PARAM:
				{
				setState(139);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BASH_VERSION:
				case ALIAS:
				case BREAK:
				case CD:
				case COMMAND:
				case DECLARE:
				case ECHO:
				case EXEC:
				case EXIT:
				case EXPORT:
				case HELP:
				case KILL:
				case SPTP:
				case SUSPEND:
				case TEST:
				case TIMES:
				case ULIMIT:
				case UMASK:
				case UNALIAS:
				case UNSET:
				case WAIT:
					{
					setState(136);
					built_in_commands();
					}
					break;
				case EQUAL:
				case DIFFERENT:
				case ESCL:
				case DLTON:
				case STRINGA:
				case DIRECTORY:
				case PARAM:
					{
					setState(137);
					expression();
					}
					break;
				case IF:
				case FOR:
				case WHILE:
				case UNTIL:
				case SELECT:
				case CASE:
				case FUNCTION:
				case RETURN:
				case NOME_VALIDO:
					{
					setState(138);
					control_block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(141);
						separator();
						setState(145);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case BASH_VERSION:
						case ALIAS:
						case BREAK:
						case CD:
						case COMMAND:
						case DECLARE:
						case ECHO:
						case EXEC:
						case EXIT:
						case EXPORT:
						case HELP:
						case KILL:
						case SPTP:
						case SUSPEND:
						case TEST:
						case TIMES:
						case ULIMIT:
						case UMASK:
						case UNALIAS:
						case UNSET:
						case WAIT:
							{
							setState(142);
							built_in_commands();
							}
							break;
						case EQUAL:
						case DIFFERENT:
						case ESCL:
						case DLTON:
						case STRINGA:
						case DIRECTORY:
						case PARAM:
							{
							setState(143);
							expression();
							}
							break;
						case IF:
						case FOR:
						case WHILE:
						case UNTIL:
						case SELECT:
						case CASE:
						case FUNCTION:
						case RETURN:
						case NOME_VALIDO:
							{
							setState(144);
							control_block();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						} 
					}
					setState(151);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(153);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(152);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			case EOF:
				{
				setState(155);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitaryListContext extends ParserRuleContext {
		public Built_in_commandsContext built_in_commands() {
			return getRuleContext(Built_in_commandsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Control_blockContext control_block() {
			return getRuleContext(Control_blockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JBashParser.EOF, 0); }
		public UnitaryListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitaryList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterUnitaryList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitUnitaryList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitUnitaryList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitaryListContext unitaryList() throws RecognitionException {
		UnitaryListContext _localctx = new UnitaryListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unitaryList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BASH_VERSION:
			case ALIAS:
			case BREAK:
			case CD:
			case COMMAND:
			case DECLARE:
			case ECHO:
			case EXEC:
			case EXIT:
			case EXPORT:
			case HELP:
			case KILL:
			case SPTP:
			case SUSPEND:
			case TEST:
			case TIMES:
			case ULIMIT:
			case UMASK:
			case UNALIAS:
			case UNSET:
			case WAIT:
				{
				setState(158);
				built_in_commands();
				}
				break;
			case EQUAL:
			case DIFFERENT:
			case ESCL:
			case DLTON:
			case STRINGA:
			case DIRECTORY:
			case PARAM:
				{
				setState(159);
				expression();
				}
				break;
			case IF:
			case FOR:
			case WHILE:
			case UNTIL:
			case SELECT:
			case CASE:
			case FUNCTION:
			case RETURN:
			case NOME_VALIDO:
				{
				setState(160);
				control_block();
				}
				break;
			case EOF:
				{
				setState(161);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Control_blockContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Until_statementContext until_statement() {
			return getRuleContext(Until_statementContext.class,0);
		}
		public Return_stmContext return_stm() {
			return getRuleContext(Return_stmContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Case_statementContext case_statement() {
			return getRuleContext(Case_statementContext.class,0);
		}
		public Control_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterControl_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitControl_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitControl_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Control_blockContext control_block() throws RecognitionException {
		Control_blockContext _localctx = new Control_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_control_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				{
				setState(164);
				if_statement();
				}
				break;
			case FOR:
				{
				setState(165);
				for_statement();
				}
				break;
			case WHILE:
				{
				setState(166);
				while_statement();
				}
				break;
			case UNTIL:
				{
				setState(167);
				until_statement();
				}
				break;
			case RETURN:
				{
				setState(168);
				return_stm();
				}
				break;
			case FUNCTION:
			case NOME_VALIDO:
				{
				setState(169);
				function();
				}
				break;
			case SELECT:
				{
				setState(170);
				select_statement();
				}
				break;
			case CASE:
				{
				setState(171);
				case_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeparatorContext extends ParserRuleContext {
		public TerminalNode PIPE() { return getToken(JBashParser.PIPE, 0); }
		public TerminalNode AND() { return getToken(JBashParser.AND, 0); }
		public TerminalNode DOUBLEPIPE() { return getToken(JBashParser.DOUBLEPIPE, 0); }
		public TerminalNode DOUBLEAND() { return getToken(JBashParser.DOUBLEAND, 0); }
		public TerminalNode SEMICOLON() { return getToken(JBashParser.SEMICOLON, 0); }
		public List<TerminalNode> CRLF() { return getTokens(JBashParser.CRLF); }
		public TerminalNode CRLF(int i) {
			return getToken(JBashParser.CRLF, i);
		}
		public SeparatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).enterSeparator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JBashParserListener ) ((JBashParserListener)listener).exitSeparator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JBashParserVisitor ) return ((JBashParserVisitor<? extends T>)visitor).visitSeparator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeparatorContext separator() throws RecognitionException {
		SeparatorContext _localctx = new SeparatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_separator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PIPE:
				{
				setState(174);
				match(PIPE);
				}
				break;
			case AND:
				{
				setState(175);
				match(AND);
				}
				break;
			case DOUBLEPIPE:
				{
				setState(176);
				match(DOUBLEPIPE);
				}
				break;
			case DOUBLEAND:
				{
				setState(177);
				match(DOUBLEAND);
				}
				break;
			case SEMICOLON:
				{
				setState(178);
				match(SEMICOLON);
				}
				break;
			case CRLF:
				{
				setState(180); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(179);
					match(CRLF);
					}
					}
					setState(182); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CRLF );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
